--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    
-    <link href="css/styles.css" rel="stylesheet">
+
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -38,7 +37,7 @@
             </div>
             <div class="col col-sm order-sm-first col-md">
                 <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives,
+                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives,
                     ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
             </div>
         </div>
@@ -50,7 +49,7 @@
             </div>
             <div class="col col-sm order-sm-first col-md">
                 <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
+                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers,
                     six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just
                     $19.99 per person </p>
             </div>
@@ -63,7 +62,7 @@
             <div class="col col-sm order-sm-first col-md">
                 <h2>Alberto Somayya</h2>
                 <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with
+                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International experience having worked closely with
                     whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion
                     experiences. </p>
             </div>
@@ -76,8 +75,8 @@
                 <div class="col-4 offset-1 col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
