--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </ul>
                 <span class="navbar-text">
                     <a data-toggle="modal" data-target="#loginModal">
-                    <span class="fa fa-sign-in"></span> Login</a>
+                        <span class="fa fa-sign-in"></span> Login</a>
                 </span>
             </div>
         </div>
@@ -86,6 +86,100 @@
         </div>
     </div>
 
+    <div id="reservemodal" class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Reserve a Table</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <div class="form-group row">
+                                <div class="col-sm-2">
+                                    <label>Number of Guests</label>
+                                </div>
+                                <div class="col-sm-10">
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio1" value="option1">
+                                        <label class="form-check-label" for="inlineRadio1">1</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio2" value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">2</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio2" value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">3</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio2" value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">4</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio2" value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">5</label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions"
+                                            id="inlineRadio2" value="option2">
+                                        <label class="form-check-label" for="inlineRadio2">6</label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="col-sm-2">
+                                    <label>Section</label>
+                                </div>
+                                <div class="col-sm">
+                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                        <label class="btn btn-success active">
+                                            <input type="radio" name="options" id="option1" autocomplete="off" checked>
+                                            Non-Smoking
+                                        </label>
+                                        <label class="btn btn-danger">
+                                            <input type="radio" name="options" id="option2" autocomplete="off">Smoking
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="col-sm-2">
+                                    <label>Date and Time</label>
+                                </div>
+                                <div class="col-sm-5">
+                                    <input type="text" class="form-control" placeholder="Date">
+                                </div>
+                                <div class="col-sm-5">
+                                    <input type="text" class="form-control" placeholder="Time">
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="col-sm-2">
+                                </div>
+                                <div class="col">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                                    <button type="button" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -98,9 +192,8 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="tooltip" data-html="true"
-                        title="Or Call us at  <br><strong>+852 12345678</strong>" data-placement="bottom"
-                        href="#reserveform">Reserve Table</a>
+                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal" data-html="true"
+                        data-target="#reservemodal">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -114,29 +207,13 @@
                         <div class="carousel-item active">
                             <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
                             <div class="carousel-caption d-none d-md-block">
-                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
-                                <!-- <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian
-                                    pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur
-                                    chillies and Buffalo Paneer.</p> -->
+                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span
+                                        class="badge badge-pill badge-default">$4.99</span></h2>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="img/buffet.png" alt="Weekend Grand buffet">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>Weekend Grand buffet <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
-                                <!-- <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian
-                                    pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur
-                                    chillies and Buffalo Paneer.</p> -->
-                            </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="img/alberto.png" alt="Alberto Somayya">
-                            <div class="carousel-caption d-none d-md-block">
-                                <h2>Alberto Somayya <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-default">$4.99</span></h2>
-                                <!-- <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and Italian
-                                    pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur
-                                    chillies and Buffalo Paneer.</p> -->
-                            </div>
                         </div>
 
                         <ol class="carousel-indicators">
@@ -186,7 +263,8 @@
                             different salads, six enticing appetizers, six main entrees and five choicest desserts. Free
                             flowing bubbly and soft drinks. All for just $19.99 per person </p>
                     </div>
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png" alt="Weekend Grand buffet">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/buffet.png"
+                        alt="Weekend Grand buffet">
                 </div>
             </div>
         </div>
@@ -205,79 +283,6 @@
                         <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide International
                             experience having worked closely with whos-who in the culinary world, he specializes in
                             creating mouthwatering Indo-Italian fusion experiences. </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row row-content justify-content-center">
-            <div class="col-sm-8" id="reserveform">
-                <div class="card">
-                    <h4 class="card-header">Reserve a Table</h4>
-                    <div class="card-body">
-                        <form>
-                            <div class="form-group">
-                                <div class="form-group row">
-                                    <div class="col-sm-2">
-                                        <label>Number of Guests</label>
-                                    </div>
-                                    <div class="col-sm-10">
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio1" value="option1">
-                                            <label class="form-check-label" for="inlineRadio1">1</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio2" value="option2">
-                                            <label class="form-check-label" for="inlineRadio2">2</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio2" value="option2">
-                                            <label class="form-check-label" for="inlineRadio2">3</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio2" value="option2">
-                                            <label class="form-check-label" for="inlineRadio2">4</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio2" value="option2">
-                                            <label class="form-check-label" for="inlineRadio2">5</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="inlineRadioOptions"
-                                                id="inlineRadio2" value="option2">
-                                            <label class="form-check-label" for="inlineRadio2">6</label>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="form-group row">
-                                    <div class="col-sm-2">
-                                        <label>Date and Time</label>
-                                    </div>
-                                    <div class="col-sm-5">
-                                        <input type="text" class="form-control" placeholder="Date">
-                                    </div>
-                                    <div class="col-sm-5">
-                                        <input type="text" class="form-control" placeholder="Time">
-                                    </div>
-                                </div>
-
-                                <div class="form-group row">
-                                    <div class="col-sm-2">
-                                    </div>
-                                    <div class="col">
-                                        <button type="submit" class="btn btn-primary">Submit</button>
-                                    </div>
-                                </div>
-                            </div>
-
-
-                        </form>
                     </div>
                 </div>
             </div>
@@ -335,12 +340,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
-    <script>
-        $(document).ready(function () {
-            $('[data-toggle="tooltip"]').tooltip();
-        });
-    </script>
 </body>
 
 </html>
