--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
                 <span class="navbar-text">
-                    <a data-toggle="modal" data-target="#loginModal">
+                    <a id="loginButton">
                         <span class="fa fa-sign-in"></span> Login</a>
                 </span>
             </div>
@@ -86,7 +86,7 @@
         </div>
     </div>
 
-    <div id="reservemodal" class="modal" tabindex="-1" role="dialog">
+    <div id="reserveModal" class="modal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -192,8 +192,7 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
-                    <a role="button" class="btn btn-block nav-link btn-warning" data-toggle="modal" data-html="true"
-                        data-target="#reservemodal">Reserve Table</a>
+                    <a role="button" class="btn btn-block nav-link btn-warning" id="reserveButton">Reserve Table</a>
                 </div>
             </div>
         </div>
@@ -357,6 +356,20 @@
                 $("#carouselButton").children("span").removeClass('fa-play');
                 $("#carouselButton").children("span").addClass('fa-pause');
             }
+        });
+
+        // activate the login modal
+        $(document).ready(function () {
+            $("#loginButton").click(function () {
+                $("#loginModal").modal();
+            });
+        });
+
+        // activate the reserve button modal
+        $(document).ready(function () {
+            $("#reserveButton").click(function () {
+                $("#reserveModal").modal();
+            });
         });
     </script>
 </body>
