--- a/index.html
+++ b/index.html
@@ -344,6 +344,8 @@
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
+    <script src="js/scripts.js"></script>
+
     <script>
         $("#carouselButton").click(function () {
             if ($("#carouselButton").children("span").hasClass('fa-pause')) {
@@ -372,6 +374,8 @@
             });
         });
     </script>
+
+    
 </body>
 
 </html>
